# prosperity

./: .env.example  .gitattributes  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Caddyfile  Dockerfile.backend  EXECUTION-ORDER.md  README.md  SPEC.md  alembic.ini  compose.dev.yml  docker-compose.dev.yml  docker-compose.yml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  quality-gate.sh  skills-lock.json
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/: create-plan.md  create-stories.md  review-code.md  review-plan.md
.claude/review/: config.json
.claude/rules/: testing-principles.md
.github/scripts/: decide.sh  decide.test.sh
.github/workflows/: ci.yml  nightly.yml  push.yml  security-scan.yml  sonarcloud.yml  sonarqube.yml
.husky/: pre-commit  pre-push
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_baseline_empty.py  0002_users.py  0003_refresh_tokens.py  0004_household_singleton.py  0005_admin_audit_logs.py  0006_invitations.py  0007_accounts.py  0008_categories.py  0009_transactions_and_splits.py  0010_transaction_share_request_id.py  0011_budgets.py  0012_budget_threshold_alerts.py  0013_split_leg_role.py  0014_debts_and_share_requests.py  0015_settlements.py  0016_debts_overflow_unique.py  0017_bank_account_external_refs.py  0018_imported_transactions.py  0019_sync_request_log.py  0020_users_public_backfill.py
backend/: .gitignore  __init__.py  checkstyle.xml  config.py  main.py  pom.xml
backend/scripts/: __init__.py  dump_openapi.py  purge_sync_request_log.py
backend/shared/: bank_labels.py  currency.py  db.py  events.py  http.py  models.py  money.py  text.py
backend/transports/: __init__.py  imports_http.py
client/: .env.example  .prettierignore  README.md  capacitor.config.ts  drizzle.config.ts  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/drizzle/: 0000_hot_ezekiel_stane.sql
client/src/: index.css  main.tsx  routeTree.gen.ts
client/tests/: auth.ts  capacitor.config.test.ts  msw-guard.test.ts  render.tsx  setup.ts
compose/initdb/: 00_powersync_roles.sql  05_powersync_storage_db.sql  10_powersync_publication.sql
docs/: Architectures BS.md  Sans titre.md  Stratégie de tests.md  architecture.md  brief.md  index_primeNG.md  prd.md
docs/adr/: 0001-initial-stack.md  0001-transaction-aggregate-immutable.md  0002-architecture-layered.md  0002-debts-as-server-projection.md  0003-money-numeric-storage.md  0003-powersync-bucket-design.md  0004-mcp-as-module.md  0005-directional-import-graph.md  0006-reconciliation-as-distinct-entity.md  0007-recurring-generation-server-cron.md  0008-mono-currency-v1-via-household-pin.md  0009-banking-provider-reader-split.md  0010-household-singleton-and-invitation-flow.md  0011-settlement-as-multi-line-entity.md  0012-sse-auth-via-short-lived-query-token.md  0013-2fa-totp-and-pat-stepup.md  0014-sync-module-and-write-upload-handler.md  0015-commit-inside-service-for-security-side-effects.md  0016-jwt-aud-iss-claims.md  0017-confirmable-expense-vs-budget-consumption.md
docs/agent_docs/: architecture.md
docs/agents/: domain.md  review-context.md  story-authoring-context.md
docs/archive/: Architectures BS.md  Stratégie de tests.md
docs/reports/: phase-02-angular-auth-review.md
docs/roadmap/: E01-bootstrap.md  E02-auth-foundations.md  E03-household-bootstrap.md  E04-rbac-invitations.md  E05-accounts.md  E06-categories.md  E07-transactions.md  E08-budgets.md  E08.5-canonical-expense-reconciliation.md  E09-debts-foundations.md  README.md  (+12 more)
frontend/: .prettierrc  angular.json  package.json  pnpm-lock.yaml
powersync/: config.yaml  sync_rules.yaml
prosperity-api/: Dockerfile  pom.xml  spotbugs-exclude.xml
prosperity-web/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
runbooks/: android_build.md  ci.md  initial_admin_via_env.md  invitations.md  powersync_setup.md  sse.md
scripts/: hash_password.py  seed.sh  smoke_powersync.sh
tests/: _powersync_tables.py  conftest.py  strategies.py
(+1067 files in other folders)
