[project]
name = "prosperity"
version = "0.1.0"
description = "Application de gestion des finances personnelles auto-hébergée pour un foyer."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
