[project]
name = "prosperity"
version = "0.1.0"
description = "Application de gestion des finances personnelles auto-hébergée pour un foyer."
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.2",
    "fastapi>=0.118",
    "ofxparse>=0.21",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.10",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.152.9",
    "testcontainers[postgres]>=4.14.2",
    "psycopg2-binary>=2.9.10",
    "factory-boy>=3.3.3",
    "pyyaml>=6.0",
    "coverage>=7.14.0",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.405",
    "ruff>=0.14.0",
    "pre-commit>=4.0",
    "import-linter>=2.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped loop so async tests share the same loop as the session-scoped
# testcontainers/db_engine/db_session fixtures (tests/integration/conftest.py).
# Without this, tests on the default function loop get "attached to a different
# loop" errors from asyncpg resources created on the fixture's session loop.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "e2e: black-box HTTP user-journey tests (committed_client + real Postgres)",
]

[tool.coverage.run]
source = ["backend"]
branch = true
# SQLAlchemy's async stack and FastAPI's threaded sync routes both
# require explicit concurrency tracking — without these, route bodies
# and async-backed DB calls report uncovered even when fully exercised
# in tests (the bodies execute in worker threads/greenlets that
# coverage's default tracer doesn't see).
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "htmlcov", ".hypothesis", ".pytest_cache", "client"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # allow magic numbers (e.g. status codes, sample counts) in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Type checker: pyright (cf. P01.3.1) — faster than mypy and better Pydantic v2 support.
# Strict on backend/ (production surface); standard on tests/ where third-party
# libs without stubs (testcontainers, factory_boy) would otherwise drown signal.
[tool.pyright]
include = ["backend", "tests"]
exclude = ["**/__pycache__", ".venv", "htmlcov", ".hypothesis", ".pytest_cache"]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
extraPaths = ["."]
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
